[package]
name = "partial-fulfillment-contract"
version = "0.1.0"
description = "Anchor program that supports partial token swap fulfillment with multiple takers."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "partial_fulfillment_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(anchor_debug)', 
    'cfg(feature, values("anchor-debug"))', 
    'cfg(feature, values("custom-heap"))', 
    'cfg(feature, values("custom-panic"))', 
    'cfg(target_os, values("solana"))'
] }